# cva6-softcore-contest

./: .gitmodules  Dockerfile  Makefile  rot13.c  script.sh
core/: Flist.cva6  acc_dispatcher.sv  csr_regfile.sv  cva6.sv  cvxif_dcache_adapter.sv  cvxif_fu.sv  ex_stage.sv  issue_read_operands.sv  issue_stage.sv  load_store_unit.sv  load_unit.sv  perf_counters.sv  store_buffer.sv  store_unit.sv
core/cache_subsystem/: cache_ctrl.sv  (+10 more)
scripts/: docker.bash
sw/: CMakeLists.txt  Makefile  init.sh  output.txt
sw/app/: Makefile  mnist.coe  mnist.hex  mnist.mem  mnist.riscv  mnist_adac.coe  mnist_adac.hex  mnist_adac.mem  mnist_adac.riscv
sw/app/mnist/: NetworkPropagate.c  dump.txt  env.h  graph.py  histogram.txt  idk.txt  main.c  map.txt  mnist  nm.txt  plot.py  run.bash  soft-record.txt  trace.py
sw/app/mnist/scripts/: graph.py  graphfinal.py  script.py  script.sh  test.py  test2.py
sw/app/mnist/scripts/testes/Felipe/: 1378i_11025d.sv  1378i_3360d.sv  1378i_4993d.sv  1378i_7419d.sv  2261i_1024d.sv  2261i_11025d.sv  2261i_1521d.sv  2261i_2261d.sv  2261i_3360d.sv  2261i_4993d.sv  2261i_7419d.sv  3709i_1024d.sv  3709i_11025d.sv  3709i_1521d.sv  3709i_2261d.sv  3709i_3360d.sv  3709i_4993d.sv  3709i_7419d.sv
sw/app/mnist/scripts/testes/Raffael/: 1378i_1024d.sv  1378i_1521d.sv  1378i_2261d.sv  512i_1024d.sv  512i_11025d.sv  512i_1521d.sv  512i_2261d.sv  512i_3360d.sv  512i_4993d.sv  512i_7419d.sv  840i_1024d.sv  840i_11025d.sv  840i_1521d.sv  840i_2261d.sv  840i_3360d.sv  840i_4993d.sv  840i_7419d.sv
sw/app/mnist/scripts/testes/bit/: 1378i_1024d.sv.bit  1378i_11025d.sv.bit
sw/app/mnist_adac/: NetworkPropagate.c  env.h
sw/app/mnist_unroll/: Network.h  NetworkPropagate.c  conv1.h  conv2.h  cpp_utils.c  cpp_utils.h  fc1.h  fc2.h  main.c  mem_info.h  typedefs.h  utils.h
sw/app/test_unroll/: NetworkPropagate.c  conv1.h  conv2.h  env.h  main.c
sw/common/: crt0.s.old  handlers.s.old  plic.h  uart.c.old  vectors.s
sw/cva6/: link.ld
sw/mnist/: Network.h  NetworkPropagate.c  conv1.h  conv2.h  cpp_utils.c  cpp_utils.h  env.h  fc1.h  fc2.h  main.c  mem_info.h  mnist.h  nnet.c  nnet.h  typedefs.h
sw/mnist/resources/: stimulus_0003.c  stimulus_4618.c
sw/mnist_adac/: config.h  main.c  network.c  network.py  save.py  xadac.c
sw/mnist_rvv/: config.h  main.c  misc.h  network.c  network.h  vector.h
sw/mnist_rvv/resources/: all.h  c0_weight.h  c1_weight.h  c2_weight.h  c3_weight.h  conv1_weight.h  conv2_weight.h  fc1_weight.h  fc2_weight.h  l0_weight.h  l1_weight.h  l2_weight.h  l3_weight.h
sw/mt-matmul/: dataset.h  matmul.c  matmul_gendata.pl  mt-matmul.c
sw/mt-vvadd/: dataset.h  mt-vvadd.c  vvadd.c  vvadd_gendata.pl
util/: flatten_flist.py
xadac/: Makefile  acc.txt  asm.py  model.txt  obi_intf.sv  xadac.sv  xadac_clobber.sv  xadac_ex.sv  xadac_ex_if.sv  xadac_ex_intf.sv  xadac_if.sv  xadac_mux.sv  xadac_obi_if.sv  xadac_pkg.sv  xadac_stage_clobber.sv  xadac_stage_mux.sv  xadac_stage_vactv.sv  xadac_stage_vbias.sv  xadac_stage_vload.sv  xadac_stage_vmacc.sv  xadac_stage_vrf.sv  xadac_tb.sv  xadac_units.sv  xadac_vactv.sv  xadac_vactv_unit.sv  xadac_vbias.sv  xadac_vbias_unit.sv  xadac_vclobber.sv  xadac_verilator.cpp  xadac_verilator.sv  xadac_vload.sv  xadac_vload_unit.sv  xadac_vmacc.sv  xadac_vmacc_unit.sv  xadac_vrf.sv  xadac_vrf_phy.sv
(+118 files in other folders)
